--- a/BSH-Siv3D/BSH-Siv3D.vcxproj
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj
@@ -313,6 +313,7 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Boundary.hpp" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
