--- a/BSH-Siv3D/BSH-Siv3D.vcxproj.filters
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj.filters
@@ -776,5 +776,8 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Boundary.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
