--- a/BSH-Siv3D/BSH-Siv3D.vcxproj
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj
@@ -113,7 +113,9 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Boundary.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SamplePoint.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -314,6 +316,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Boundary.hpp" />
+    <ClInclude Include="SamplePoint.hpp" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
