--- a/BSH-Siv3D/BSH-Siv3D.vcxproj.filters
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj.filters
@@ -144,6 +144,12 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Boundary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SamplePoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -777,6 +783,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Boundary.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SamplePoint.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
