--- a/BSH-Siv3D/BSH-Siv3D.vcxproj
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj
@@ -116,6 +116,7 @@
     <ClCompile Include="Boundary.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SamplePoint.cpp" />
+    <ClCompile Include="State.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -317,6 +318,7 @@
   <ItemGroup>
     <ClInclude Include="Boundary.hpp" />
     <ClInclude Include="SamplePoint.hpp" />
+    <ClInclude Include="State.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
