--- a/BSH-Siv3D/BSH-Siv3D.vcxproj
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj
@@ -114,6 +114,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Boundary.cpp" />
+    <ClCompile Include="HalfSpace.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SamplePoint.cpp" />
     <ClCompile Include="State.cpp" />
@@ -317,6 +318,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Boundary.hpp" />
+    <ClInclude Include="HalfSpace.hpp" />
     <ClInclude Include="SamplePoint.hpp" />
     <ClInclude Include="State.h" />
     <ClInclude Include="stdafx.h" />
