--- a/BSH-Siv3D/BSH-Siv3D.vcxproj.filters
+++ b/BSH-Siv3D/BSH-Siv3D.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="State.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HalfSpace.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -792,6 +795,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="State.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HalfSpace.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
